# mpi4all

./: Dockerfile  LICENSE  README.rst  pyproject.toml  setup.py
mpi4all/: __main__.py  baseBuilder.py  gobuilder.py  javabuilder.py  main.py  mpiparser.py  parser.py  version.py
mpi4all/generator/: base.py  go.py  java.py
test/: test.py
test/go/: go.mod  main.go  test.sh
test/java/: test.sh  test21.sh
test/java/org/main/: Main.java
test/mpich/: Dockerfile
test/ompi/: Dockerfile
